--- a/MyProject/MyProject.csproj
+++ b/MyProject/MyProject.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
     <PackageReference Include="Umbraco.Cms" Version="16.1.0" />
   </ItemGroup>
 
